Fix uneven table headers.

--- a/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
+++ b/src/app/shared/components/table/hephaestus-table/hephaestus-table.component.scss
@@ -23,7 +23,7 @@
 .table-header {
   text-align: left;
   background-color: #EDC7B7;
-  width: 100%;
+  width: calc(100% - 5px);
   height: 7%;
   padding: 5px 0px 0px 5px;
 }
